# Dendritic-crystal-growth

./: .gitignore  CMakeLists.txt  README.md
configs/: default.json  test_scn.json
include/: Checkpoint.h  ConfigLoader.h  Field.h  FieldRender.h  FieldRender.hpp  Grid.h  MaterialsLibrary.h  MaterialsParametrs.h  MathFunctions.h  Metrics.h  PhaseField.h  Statistics.h  TemperatureField.h
runs/run_eps0.005500_D0.550000_20260520_150749/: metrics.csv
src/: Checkpoint.cpp  ConfigLoader.cpp  Field.cpp  FieldRender.cpp  Grid.cpp  MaterialsLibrary.cpp  MathFunctions.cpp  Metrics.cpp  PhaseField.cpp  Statistics.cpp  TemperatureField.cpp  main.cpp
